<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWaiterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="352dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/uploadImageConstraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textViewUploadPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/upload_image"
                        android:textColor="@color/black"
                        android:textSize="42sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/imageButtonCamera"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="16dp"
                        android:clickable="true"
                        android:contentDescription="@string/camera_image_description"
                        android:focusable="true"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageButtonGallery"
                        app:layout_constraintStart_toEndOf="@+id/textViewUploadPhoto"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/camera" />

                    <ImageButton
                        android:id="@+id/imageButtonGallery"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/gallery_image_description"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/gallery" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageViewUser"
                    android:layout_width="360dp"
                    android:layout_height="360dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/border"
                    android:contentDescription="@string/waiter_image_description"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/uploadImageConstraintLayout"
                    app:srcCompat="@drawable/user" />

                <LinearLayout
                    android:id="@+id/nameLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewUser">

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:autofillHints="name"
                        android:inputType="text"
                        android:textSize="32sp"
                        tools:ignore="LabelFor" />
                </LinearLayout>

                <Button
                    android:id="@+id/addWaiterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/add_waiter_button"
                    android:textSize="42sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameLinearLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>



